2010-05-15  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Add copyright of the ACTIVE/INACTIVE
	indicators derived from Wanderlust.
	(twittering-active-indicator-image): add the copyright as a
	comment.
	(twittering-inactive-indicator-image): likewise.

2010-05-11  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix initialization of `twittering-tls-program'.
	(twittering-start-http-session-native-tls-p): use
	`twittering-tls-program' if it is non-nil.

2010-05-09  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Use "\\`" as the regexp for the head of a
	tweet instead of "^". This prevents misinterpretation of tweets
	including multiple lines.
	(twittering-edit-post-status): correct the regexp for determining
	whether the "in-reply-to" ID should be attached or not.
	(twittering-update-status-from-minibuffer): likewise.
	(twittering-status-not-blank-p): correct the regexp for
	distinguish a blank tweet from a non-blank tweet.

	* twittering-mode.el: Prevent applying improper functions to a
	failed connection.
	(twittering-verify-credentials): give up authorization if
	`twittering-call-api' returns nil.
	(twittering-start-http-session-curl): return nil if it failed to
	open a connection.
	(twittering-start-http-session-native): likewise.

	* twittering-mode.el: Support HTTPS with `tls' library.
	(twittering-tls-program): new variable.
	(twittering-connection-type-table): register
	`twittering-start-http-session-native-tls-p' as the "https" entry
	for "native".
	(twittering-start-http-session-native-tls-p): new function.
	(twittering-start-http-session-native): call `open-tls-stream' if
	`twittering-use-ssl' is non-nil.
	* emacs21/tls.el: Imported from Emacs 22.2.1 on Debian 5.0 for
	Emacs21 that does not include `tls.el'.

2010-05-08  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Add an abstract layer for Twitter API.
	(twittering-call-api): new function.
	(twittering-timeline-spec-to-host-method): removed.